# mevlog-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  context7.json  justfile  notes.md  release.toml  rustfmt.toml
.github/workflows/: backend.yml  build-and-release-cryo.yml  rust.yml  (+6 more)
contracts/: ENSLookup.sol
crates/mevlog/: Cargo.toml
crates/mevlog-backend/: Cargo.toml  LICENSE.txt  README.md  ansible-hosts  ansible.cfg  package-lock.json  package.json  timestamp_assets.sh  webpack.config.js
crates/mevlog-backend/docs_src/: book.toml
crates/mevlog-backend/docs_src/src/: SUMMARY.md  cli-reference.md  coinbase-transfers.md  config.md  core-concepts.md  custom-tables.md  ens.md  evm-analysis.md  evm-commands.md  evm-rpc-revm-modes.md  evm-sqlite-helpers.md  getting-started.md  indexing.md  introduction.md  ipfs.md  mcp.md  output.md  query.md  quick-start.md  schema.md  sql.md  sqlite-storage.md  storage-requirements.md  terms.md  tui.md  u256-functions.md
crates/mevlog-backend/docs_src/src/commands/: blocks.md  chains.md  database.md  transactions.md
crates/mevlog-backend/docs_src/src/configuration/: config-file.md  rpc-urls.md  storage.md
crates/mevlog-backend/docs_src/src/getting-started/: concepts.md  installation.md  quick-start.md
crates/mevlog-backend/docs_src/src/integrations/: mcp.md
crates/mevlog-backend/docs_src/src/querying/: macros.md
crates/mevlog-backend/docs_src/src/reference/: schema.md  tracing.md
crates/mevlog-backend/docs_src/theme/: head.hbs  index.hbs  mevlog.css
crates/mevlog-backend/javascripts/: scripts.js
crates/mevlog-backend/javascripts/react/: ChainSelector.jsx  CommandBuilder.jsx  ExploreViewer.jsx  HelpersReference.jsx  Log.jsx  LogGroup.jsx  MevlogViewer.jsx  SchemaReference.jsx  SearchForm.jsx  Transaction.jsx  index.js  presets.js
crates/mevlog-backend/playbooks/: reboot.yml  setup.yml  update.yml
crates/mevlog-backend/playbooks/roles/nginx/files/: mevlog.rs.conf
crates/mevlog-backend/playbooks/roles/nginx/tasks/: main.yml
crates/mevlog-backend/remote/: clear_logs.sh  copy_logs.sh  dbg.sh  kill_server.sh  logs.sh  mcp_start.sh  mcp_status.sh  mcp_stop.sh  restart.sh  scheduler_start.sh  scheduler_stop.sh  server_start.sh  server_stop.sh
crates/mevlog-backend/src/: content.rs  controllers.rs  lib.rs
crates/mevlog-backend/src/config/: middleware.rs  routes.rs  schedule.rs
crates/mevlog-backend/src/content/: app_pages.rs  doc_pages.rs
crates/mevlog-backend/src/controllers/: base_controller.rs  html.rs  json.rs  websocket.rs
crates/mevlog-backend/src/controllers/html/: explore_controller.rs  home_controller.rs  not_found_controller.rs  search_controller.rs  terms_controller.rs  tui_controller.rs
crates/mevlog-backend/src/controllers/json/: base_controller.rs  chain_info_controller.rs  chains_controller.rs  db_info_controller.rs  explore_controller.rs  search_controller.rs
crates/mevlog-backend/src/controllers/websocket/: base_controller.rs  search_controller.rs
crates/mevlog-backend/src/misc/: mod.rs  prices.rs  rpc_utils.rs  utils.rs
crates/mevlog-backend/styles/: spinner.css  styles.css  terminal.css
crates/mevlog-backend/templates/: 404.html  explore.html  home.html  layout.html  search.html  terms.html  tui.html
crates/mevlog/migrations/: 20250308114925_create_events.up.sql  20250308212546_create_methods.up.sql
crates/mevlog/migrations/sigs/: 20250308114925_create_events.down.sql  20250308212546_create_methods.down.sql  20250711203808_create_chains.down.sql  20260527120000_create_schema_v5.down.sql  20260527120000_create_schema_v5.up.sql
crates/mevlog/migrations/txs/: 20260527120000_create_schema_v1.down.sql  20260527120000_create_schema_v1.up.sql  20260527120000_create_transactions.up.sql
crates/mevlog/scripts/: upload-signatures-db.sh
crates/mevlog/src/: cmds.rs  db.rs  lib.rs  mcp_server.rs  misc.rs  models.rs
crates/mevlog/src/cmds/: affected_addresses.rs  block.rs  block_logs.rs  block_txs.rs  chain_info.rs  chains.rs  coinbase_transfer.rs  debug_available.rs  ens_lookup.rs  ens_resolve.rs  evm_traces.rs  query.rs  state_diff.rs  tx.rs  tx_logs.rs  update_db.rs
crates/mevlog/src/db/: shared.rs  sigs.rs  txs.rs
crates/mevlog/src/db/sigs/: actions.rs  models.rs
crates/mevlog/src/db/sigs/models/: chain.rs  event.rs  method.rs
crates/mevlog/src/db/txs/: custom_tables.rs  display_sql.rs  indexing.rs  info.rs  models.rs  purge.rs  raw_query.rs
crates/mevlog/src/db/txs/models/: block.rs  log.rs  transaction.rs
crates/mevlog/src/misc/: args_parsing.rs  coinbase_bribe.rs  config.rs  data_fetch.rs  database.rs  db_actions.rs  ens_utils.rs  ipfs.rs  parquet_utils.rs  revm_tracing.rs  rpc_capability.rs  rpc_tracing.rs  rpc_urls.rs  shared_init.rs  sql_macros.rs  symbol_utils.rs  tx_tracing.rs  utils.rs
crates/mevlog/src/models/: call_extract.rs  db_chain.rs  db_method.rs  evm_chain.rs  json.rs  mev_address.rs  mev_block.rs  mev_log.rs  mev_log_group.rs  mev_log_signature.rs  mev_opcode.rs  mev_state_diff.rs  mev_transaction.rs  sigs.rs  state_diff.rs  txs_filter.rs
crates/mevlog/src/models/json/: block_json.rs  db_info_response.rs  index_response.rs  log_json.rs  mev_log_group_json.rs  mev_log_json.rs  mev_opcode_json.rs  mev_state_diff_json.rs  mev_transaction_json.rs  purge_response.rs  query_response.rs  state_diff_json.rs  transaction_json.rs
crates/mevlog/src/models/sigs/: db_chain.rs  db_event.rs  db_method.rs
crates/mevlog/src/models/txs/: transaction.rs
crates/mevlog/tests/: cli_tests.rs  txs_sqlite_test.rs
crates/mevlog/tests/fixtures/cryo/ethereum/: ethereum__blocks__25215353_to_25215357.parquet  ethereum__logs__25215353_to_25215357.parquet  ethereum__transactions__25215353_to_25215357.parquet
docs/: MCP.md
examples/: find_ens_name.rs
migrations/: 20250308114925_create_events.up.sql  20250308212546_create_methods.up.sql  20250711203808_create_chains.down.sql  20250711203808_create_chains.up.sql
scripts/: compare.sh  upload-signatures-db.sh
src/: lib.rs  mcp_server.rs  misc.rs  models.rs
test/: ENSLookup.t.sol
tests/: cli_tests.rs
(+40 files in other folders)
