[package]
name = "mevlog"
version = "0.7.0"
edition = "2024"
repository = "https://github.com/pawurb/mevlog-rs"
description = "EVM transactions monitoring and querying CLI powered by Revm"
readme = "README.md"
license = "MIT"
categories = ["command-line-utilities"]

[dependencies]
tokio = { version = "1.44.0", features = ["rt-multi-thread", "macros", "net", "fs", "time", "sync", "io-util"] }

alloy = { version = "1.0", features = ["full"] }
revm-inspectors = "0.29.1"
eyre = "0.6.12"
serde_json = "1.0"
serde = "=1.0.219"
hex = "0.4.3"
url = "2.5.0"
revm = { version = "29.0.0", features = ["std", "alloydb"] }
foundry-fork-db = "0.18.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3.31"
tracing-subscriber = { version = "0.3.20", features = ["time", "env-filter"] }
time = "0.3.36"
tracing = "0.1.41"
sqlx = { version = "0.8.3", features = [
  "runtime-tokio-rustls",
  "sqlite",
  "macros",
] }
home = "0.5.11"
glob = "0.3.2"
clap = { version = "4.5.31", features = ["derive", "env"] }
colored = "3.0.0"
indicatif = "0.17.11"
cacache = { version = "12.0.0", default-features = false, features = [
  "tokio-runtime",
  "mmap",
] }
ruzstd = "0.8.0"
regex = "1.11.1"
chrono = "0.4.40"
arrow = { version = "56.0", features = ["chrono-tz"] }
parquet = { version = "56.0", features = ["arrow"] }
bigdecimal = "0.4.7"
html-escape = "0.2.13"
which = "7.0.3"
alloy-chains = "0.2.5"
console-subscriber = { version = "0.4.1", optional = true }
hotpath = { version = "0.2.4", optional = true }

[dev-dependencies]
uuid = { version = "1.11.0", features = ["v4", "js"] }

[[bin]]
name = "mevlog"
path = "bin/main.rs"

[[example]]
name = "find_ens_name"
path = "examples/find_ens_name.rs"

[features]
seed-db = []
tokio-console = ["tokio/full", "tokio/tracing", "dep:console-subscriber"]

hotpath = ["dep:hotpath", "hotpath/hotpath"]
hotpath-alloc-bytes-total = ["hotpath/hotpath-alloc-bytes-total"]
hotpath-alloc-bytes-max = ["hotpath/hotpath-alloc-bytes-max"]
hotpath-alloc-count-total= ["hotpath/hotpath-alloc-count-total"]
hotpath-alloc-count-max= ["hotpath/hotpath-alloc-count-max"]

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1

[profile.instrument]
inherits = "release"
debug = true
