[package]
name = "mevlog"
version = "0.7.1"
edition = "2024"
repository = "https://github.com/pawurb/mevlog-rs"
description = "EVM transactions monitoring and querying CLI powered by Revm"
readme = "README.md"
license = "MIT"
categories = ["command-line-utilities"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "fs", "time", "sync", "io-util", "process"] }

alloy = { version = "1", features = ["full"] }
revm-inspectors = "0.33"
eyre = "0.6"
serde_json = "1"
serde = "1"
hex = "0.4"
url = "2"
revm = { version = "33", features = ["std", "alloydb", "parse"] }
foundry-fork-db = "0.21"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
tracing-subscriber = { version = "0.3", features = ["time", "env-filter"] }
time = { version = "0.3", features = ["local-offset"] }
tracing = "0.1"
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio-rustls",
  "sqlite",
  "macros",
  "migrate",
] }
home = "0.5"
toml = "0.8"
glob = "0.3"
clap = { version = "4", features = ["derive", "env"] }
colored = "3"
indicatif = "0.17"
cacache = { version = "12", default-features = false, features = [
  "tokio-runtime",
  "mmap",
] }
ruzstd = "0.8"
regex = "1"
chrono = "0.4"
arrow = { version = "56", features = ["chrono-tz"] }
parquet = { version = "56", features = ["arrow"] }
bigdecimal = "0.4"
html-escape = "0.2"
which = "7"
alloy-chains = "0.2"
console-subscriber = { version = "0.4", optional = true }
hotpath = { version = "0.9", features = ["tokio"] }
# hotpath = { path = "../hotpath-rs/crates/hotpath", features = ["tokio"] }
crossterm = { version = "0.29", optional = true }
ratatui = { version = "0.29", optional = true }
crossbeam-channel = { version = "0.5", optional = true }
rand = "0.9.2"

[dev-dependencies]
uuid = { version = "1", features = ["v4", "js"] }

[[bin]]
name = "mevlog"
path = "bin/main.rs"

[[example]]
name = "find_ens_name"
path = "examples/find_ens_name.rs"

[features]
default = []
seed-db = []
tokio-console = ["tokio/full", "tokio/tracing", "dep:console-subscriber"]
tui = ["dep:crossterm", "dep:ratatui", "dep:crossbeam-channel"]
hotpath = ["hotpath/hotpath"]
hotpath-alloc = ["hotpath/hotpath-alloc"]
hotpath-off = ["hotpath/hotpath-off"]

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1

[profile.instrument]
inherits = "release"
debug = true
