[package]
name = "mevlog-backend"
version = "0.0.0"
publish = false
edition = "2024"

[dependencies]
url = { workspace = true }
alloy = { workspace = true, features = ["full", "node-bindings"] }
uuid = { version = "1.11.0", features = ["v4"] }
eyre = { workspace = true }
serde_json = { workspace = true }
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
tracing-subscriber = { workspace = true, features = ["time"] }
tracing = { workspace = true }
tracing-futures = "0.2"
tower-http = { version = "0.6.2", features = [
  "cors",
  "fs",
  "trace",
  "timeout",
  "compression-gzip",
  "compression-br",
  "compression-deflate",
  "catch-panic",
  "set-header",
] }
tower = "0.5.2"
futures = "0.3.31"
tokio-cron-scheduler = { version = "0.13.0", features = ["signal", "english"] }
tracing-appender = "0.2.3"
time = { workspace = true }
axum = { workspace = true, features = ["ws"] }
futures-util = { workspace = true }
unicode-normalization = "0.1.24"
ansi-to-html = "0.2.2"
askama = "0.12.1"
regex = { workspace = true }
tokio-stream = "0.1.17"
mevlog = { workspace = true }
rand = { workspace = true }
hotpath = { git = "https://github.com/pawurb/hotpath-rs", branch = "main" }

[dev-dependencies]
glob = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
mockito = "1.5.0"
http-body-util = "0.1.2"

[[bin]]
name = "server"
path = "bin/server.rs"

[[bin]]
name = "scheduler"
path = "bin/scheduler.rs"

[package.metadata.askama]
template-dir = "templates"

[features]
hotpath = ["hotpath/hotpath"]
hotpath-alloc= ["hotpath/hotpath-alloc"]
