[package]
name = "mevlog"
version = "0.8.1"
edition = "2024"
repository = "https://github.com/pawurb/mevlog-rs"
description = "EVM transactions monitoring and querying CLI powered by Revm"
readme = "README.md"
license = "MIT"
categories = ["command-line-utilities"]

[dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "fs", "time", "sync", "io-util", "process"] }

alloy = { workspace = true, features = ["full"] }
revm-inspectors = "0.33"
eyre = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
hex = "0.4"
url = { workspace = true }
revm = { workspace = true, features = ["std", "alloydb", "parse"] }
foundry-fork-db = "0.21"
reqwest = { workspace = true, features = ["json", "stream"] }
futures-util = { workspace = true }
tracing-subscriber = { workspace = true, features = ["time", "env-filter"] }
time = { workspace = true, features = ["local-offset"] }
tracing = { workspace = true }
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio-rustls",
  "sqlite",
  "macros",
  "migrate",
] }
home = "0.5"
toml = "0.8"
glob = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
colored = "3"
indicatif = "0.17"
cacache = { version = "12", default-features = false, features = [
  "tokio-runtime",
  "mmap",
] }
ruzstd = "0.8"
regex = { workspace = true }
chrono = "0.4"
arrow = { version = "56", features = ["chrono-tz"] }
parquet = { version = "56", features = ["arrow"] }
bigdecimal = "0.4"
html-escape = "0.2"
which = "7"
alloy-chains = "0.2"
console-subscriber = { version = "0.4", optional = true }
hotpath = { version = "0.14", features = ["tokio", "crossbeam"] }
# hotpath = { path = "../hotpath-rs/crates/hotpath", features = ["tokio"] }
crossterm = { version = "0.28", optional = true }
ratatui = { version = "0.29", optional = true }
crossbeam-channel = { version = "0.5", optional = true }
tui-input = { version = "0.11", features = ["crossterm"], optional = true }
rand = { workspace = true }
rmcp = { version = "0.13", features = ["server", "transport-streamable-http-server", "transport-streamable-http-server-session"], optional = true }
schemars = { version = "1", optional = true }
axum = { workspace = true, optional = true }
tokio-util = { version = "0.7", optional = true }

[dev-dependencies]
uuid = { version = "1", features = ["v4", "js"] }

[[bin]]
name = "mevlog"
path = "bin/main.rs"

[[example]]
name = "find_ens_name"
path = "examples/find_ens_name.rs"

[features]
default = []
seed-db = []
tokio-console = ["tokio/full", "tokio/tracing", "dep:console-subscriber"]
tui = ["dep:crossterm", "dep:ratatui", "dep:crossbeam-channel", "dep:tui-input"]
hotpath = ["hotpath/hotpath"]
hotpath-alloc = ["hotpath/hotpath-alloc"]
hotpath-mcp = ["hotpath/hotpath-mcp"]
mcp = ["dep:rmcp", "dep:axum", "dep:tokio-util", "dep:schemars"]
